# api-docs.json
@@ -176,64 +176,6 @@
                     }
                 }
             }
-        },
-        "\/products": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Display a listing of the resource.",
-                "parameters": [
-                    {
-                        "name": "category slug",
-                        "in": "query",
-                        "description": "category slug",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "search_query",
-                        "in": "query",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "sort_mode",
-                        "in": "query",
-                        "description": "0 - price asc, 1 - price desc",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "filters",
-                        "in": "query",
-                        "required": false,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "$ref": "#\/components\/responses\/"
-                    },
-                    "404": {
-                        "description": "Not found"
-                    }
-                }
-            }
         }
     },
     "components": {
@@ -516,6 +458,12 @@
                                     "type": "array",
                                     "items": {
                                         "$ref": "#\/components\/schemas\/Filter"
+                                    }
+                                },
+                                "category": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#\/components\/schemas\/Category"
                                     }
                                 }
                             }
