# app/Modules/Products/Entities/Brand.php
@@ -3,7 +3,6 @@
 namespace App\Modules\Products\Entities;
 
 use App\Modules\Products\Database\factories\BrandFactory;
-use App\Modules\Products\Database\factories\ColorFactory;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\HasMany;
