# app/Modules/Products/Routes/web.php
@@ -10,7 +10,3 @@
 | contains the "web" middleware group. Now create something great!
 |
 */
-
-Route::prefix('products')->group(function() {
-    Route::get('/', 'ProductsController@index');
-});
